--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                     <a href="rooms.html" class="btn btn-primary">Reserve Your Residence</a>
                 </div>
                 <div class="story-image-wrapper" data-aos="fade-right">
-                    <img src="https://picsum.photos/id/56/700/500" alt="Hotel staff greeting a guest" class="img-responsive">
+                    <img src="https://plus.unsplash.com/premium_photo-1726718465660-9135cc91d31e?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8aG90ZWwlMjBzdGFmZiUyMGdyZWV0aW5nJTIwYSUyMGd1ZXN0fGVufDB8fDB8fHww&auto=format&fit=crop&q=60&w=500" alt="Hotel staff greeting a guest" class="img-responsive">
                 </div>
             </div>
         </div>
@@ -69,7 +69,7 @@
             <div class="team-grid">
                 
                 <div class="team-card" data-aos="fade-up">
-                    <img src="https://picsum.photos/id/60/350/350" alt="Executive team member photo" class="team-photo">
+                    <img src="https://images.unsplash.com/photo-1573496358961-3c82861ab8f4?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZmVzc2lvbmFsJTIwYmxhY2slMjB3b21hbnxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&q=60&w=500" alt="Executive team member photo" class="team-photo">
                     <div class="team-info">
                         <h4>Dr. Kemi Adebayo</h4>
                         <p class="role">Managing Director</p>
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="team-card" data-aos="fade-up" data-aos-delay="250">
-                    <img src="https://picsum.photos/id/61/350/350" alt="Executive team member photo" class="team-photo">
+                    <img src="https://plus.unsplash.com/premium_photo-1661266906739-429a936075cd?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fHByb2Zlc3Npb25hbCUyMGJsYWNrJTIwbWFufGVufDB8fDB8fHww&auto=format&fit=crop&q=60&w=500" alt="Executive team member photo" class="team-photo">
                     <div class="team-info">
                         <h4>Mr. Tunde Johnson</h4>
                         <p class="role">Director of Operations</p>
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="team-card" data-aos="fade-up" data-aos-delay="500">
-                    <img src="https://picsum.photos/id/84/350/350" alt="Executive team member photo" class="team-photo">
+                    <img src="https://images.unsplash.com/photo-1592498536065-2285610c4f5e?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fHByb2Zlc3Npb25hbCUyMGJsYWNrJTIwY2hlZnxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&q=60&w=500" alt="Executive team member photo" class="team-photo">
                     <div class="team-info">
                         <h4>Chef Dapo Eze</h4>
                         <p class="role">Executive Culinary Director</p>
@@ -109,9 +109,10 @@
 
 
     <footer>
-        <p>Lux Aeterna Hotel | Address: 123 Elegance Blvd, Ikoyi, Lagos, Nigeria | Phone: +234 (0) 1 555 8888</p>
-        <p>© 2025 Lux Aeterna Hotel. Setting the Standard Since 2022.</p>
-    </footer>
+    <p>Lux Aeterna Hotel | Address: 123 Elegance Blvd, Ikoyi, Lagos, Nigeria | Phone: +234 (0) 1 555 8888</p>
+    <p>© 2025 Lux Aeterna Hotel. Setting the Standard Since 2022.</p>
+    <p class="design-credit">Designed by <a href="https://www.instagram.com/dev_boy09/" target="_blank">Emerald</a></p>
+</footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
