--- a/amenities.html
+++ b/amenities.html
@@ -58,7 +58,7 @@
                     <a href="services.html#dining" class="btn btn-secondary">Reserve a Table</a>
                 </div>
                 <div class="facility-image">
-                    <img src="https://picsum.photos/id/238/800/600" alt="Fine Dining Restaurant Interior" class="img-responsive">
+                    <img src="https://images.unsplash.com/photo-1414235077428-338989a2e8c0?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8ZmluZSUyMGRpbmluZ3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&q=60&w=500" alt="Fine Dining Restaurant Interior" class="img-responsive">
                 </div>
             </div>
         </div>
@@ -76,7 +76,7 @@
                     <a href="#" class="btn btn-primary">View Poolside Menu</a>
                 </div>
                 <div class="facility-image">
-                    <img src="https://picsum.photos/id/214/800/600" alt="Rooftop Infinity Pool" class="img-responsive">
+                    <img src="https://images.unsplash.com/photo-1565093760800-ebf13e849364?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fHNreSUyMHN3aW1taW5nJTIwcG9vbHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&q=60&w=500" alt="Rooftop Infinity Pool" class="img-responsive">
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
                     <a href="services.html#spa" class="btn btn-secondary">Book a Spa Treatment</a>
                 </div>
                 <div class="facility-image">
-                    <img src="https://picsum.photos/id/161/800/600" alt="Serenity Spa Interior" class="img-responsive">
+                    <img src="https://images.unsplash.com/photo-1596178060671-7a80dc8059ea?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDR8fHNwYXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&q=60&w=500" alt="Serenity Spa Interior" class="img-responsive">
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
                     <a href="contact.html?inquiry=meetings" class="btn btn-primary">Book a Meeting Suite</a>
                 </div>
                 <div class="facility-image">
-                    <img src="https://picsum.photos/id/223/800/600" alt="Business Center Meeting Room" class="img-responsive">
+                    <img src="https://plus.unsplash.com/premium_photo-1661963781048-9780e4ecae5b?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8ZXhlY3V0aXZlJTIwc3VpdGV8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&q=60&w=500" alt="Business Center Meeting Room" class="img-responsive">
                 </div>
             </div>
         </div>
@@ -127,9 +127,10 @@
 
 
     <footer>
-        <p>Lux Aeterna Hotel | Address: 123 Elegance Blvd, Ikoyi, Lagos, Nigeria | Phone: +234 (0) 1 555 8888</p>
-        <p>© 2025 Lux Aeterna Hotel. Setting the Standard Since 2022.</p>
-    </footer>
+    <p>Lux Aeterna Hotel | Address: 123 Elegance Blvd, Ikoyi, Lagos, Nigeria | Phone: +234 (0) 1 555 8888</p>
+    <p>© 2025 Lux Aeterna Hotel. Setting the Standard Since 2022.</p>
+    <p class="design-credit">Designed by <a href="https://www.instagram.com/dev_boy09/" target="_blank">Emerald</a></p>
+</footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script> AOS.init({ once: true, duration: 900, }); </script>
