--- a/index.html
+++ b/index.html
@@ -139,9 +139,10 @@
 
 
     <footer>
-        <p>Lux Aeterna Hotel | Address: 123 Elegance Blvd, Ikoyi, Lagos, Nigeria | Phone: +234 (0) 1 555 8888</p>
-        <p>© 2025 Lux Aeterna Hotel. Setting the Standard Since 2022.</p>
-    </footer>
+    <p>Lux Aeterna Hotel | Address: 123 Elegance Blvd, Ikoyi, Lagos, Nigeria | Phone: +234 (0) 1 555 8888</p>
+    <p>© 2025 Lux Aeterna Hotel. Setting the Standard Since 2022.</p>
+    <p class="design-credit">Designed by <a href="https://www.instagram.com/dev_boy09/" target="_blank">Emerald</a></p>
+</footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
