--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
 
     <section class="concierge-intro">
         <div class="container text-center">
-            <h2 class="section-title">Professional Concierge, Authentically Nigerian.</h2>
+            <h2 class="section-title">Professional Services, To ensure your maximum satisfaction.</h2>
             <p class="lead-paragraph">Our team is here to make your time in Lagos effortless. Whether you need an early-morning airport drop-off, a trusted recommendation for local dining, or help securing a booking, we handle it with discretion and professionalism. **We are your trusted contact in the city, available 24 hours a day.**</p>
         </div>
     </section>
@@ -58,7 +58,7 @@
                     <a href="contact.html?service=transport" class="btn btn-secondary">Arrange Transport</a>
                 </div>
                 <div class="service-image">
-                    <img src="https://picsum.photos/id/101/600/500" alt="Executive car at hotel entrance" class="img-responsive">
+                    <img src="https://media.istockphoto.com/id/1695506351/photo/male-driver-helps-a-business-lady-to-get-out-of-a-car.webp?a=1&b=1&s=612x612&w=0&k=20&c=tU9LsHqyEU1_pThq6rcb9Xoc__kj6T0-KjGD-hQk9r0=" alt="Executive car at hotel entrance" class="img-responsive">
                 </div>
             </div>
         </div>
@@ -76,7 +76,7 @@
                     <a href="amenities.html#restaurant-section" class="btn btn-white-border">View Dining Options</a>
                 </div>
                 <div class="service-image">
-                    <img src="https://picsum.photos/id/196/600/500" alt="Hotel room service or dining setting" class="img-responsive">
+                    <img src="https://media.istockphoto.com/id/1263774592/photo/room-service-detail-of-a-young-latin-waitress-bringing-breakfast-to-the-hotel-room.webp?a=1&b=1&s=612x612&w=0&k=20&c=CMqanHn8eI3_y-NxS8VBLQNPDYI-qkNCfcBrTpjJmRg=" alt="Hotel room service or dining setting" class="img-responsive">
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
                     <a href="#" class="btn btn-primary">View Sample Itineraries</a>
                 </div>
                 <div class="service-image">
-                    <img src="https://picsum.photos/id/218/600/500" alt="Local Lagos marketplace or art" class="img-responsive">
+                    <img src="https://media.istockphoto.com/id/518025294/photo/african-art-crafts-artefacts-sculpture-and-souvenirs-nigeria-africa.webp?a=1&b=1&s=612x612&w=0&k=20&c=aY7sQK58hBBfYNAhyK8oH9sztlFJNnwbEE-iCHnycVE=" alt="Local Lagos marketplace or art" class="img-responsive">
                 </div>
             </div>
         </div>
@@ -103,7 +103,7 @@
 
     <section class="pull-quote-banner">
         <div class="container text-center" data-aos="zoom-in">
-            <p>“The luxury of time is our final service. Our team is dedicated to saving you yours.”</p>
+            <p>“The luxury of time is our final service. Our team is dedicated to serving you.”</p>
         </div>
     </section>
 
@@ -118,9 +118,10 @@
 
 
     <footer>
-        <p>Lux Aeterna Hotel | Address: 123 Elegance Blvd, Ikoyi, Lagos, Nigeria | Phone: +234 (0) 1 555 8888</p>
-        <p>© 2025 Lux Aeterna Hotel. Setting the Standard Since 2022.</p>
-    </footer>
+    <p>Lux Aeterna Hotel | Address: 123 Elegance Blvd, Ikoyi, Lagos, Nigeria | Phone: +234 (0) 1 555 8888</p>
+    <p>© 2025 Lux Aeterna Hotel. Setting the Standard Since 2022.</p>
+    <p class="design-credit">Designed by <a href="https://www.instagram.com/dev_boy09/" target="_blank">Emerald</a></p>
+</footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
