--- a/rooms.html
+++ b/rooms.html
@@ -43,7 +43,7 @@
                 
                 <div class="room-card" data-aos="fade-up">
                     <div class="card-image-container">
-                        <img src="https://picsum.photos/id/180/800/600" alt="Classic Deluxe Room">
+                        <img src="https://plus.unsplash.com/premium_photo-1683141389645-b611f095987a?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fGNsYXNzaWMlMjBkZWx1eGUlMjByb29tfGVufDB8fDB8fHww&auto=format&fit=crop&q=60&w=500" alt="Classic Deluxe Room">
                     </div>
                     <div class="card-content">
                         <h3 id="deluxe">Classic Deluxe Room</h3>
@@ -60,7 +60,7 @@
 
                 <div class="room-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="card-image-container">
-                        <img src="https://picsum.photos/id/237/800/600" alt="Executive Suite">
+                        <img src="https://plus.unsplash.com/premium_photo-1661879252375-7c1db1932572?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzN8fGRlbHV4JTIwc3VpdGV8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&q=60&w=500" alt="Executive Suite">
                     </div>
                     <div class="card-content">
                         <h3 id="executive">Executive Suite</h3>
@@ -77,7 +77,7 @@
 
                 <div class="room-card" data-aos="fade-up" data-aos-delay="400">
                     <div class="card-image-container">
-                        <img src="https://picsum.photos/id/292/800/600" alt="Grand Suite">
+                        <img src="https://plus.unsplash.com/premium_photo-1661962459469-27479898b31e?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzN8fGdyYW5kJTIwc3VpdGV8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&q=60&w=500" alt="Grand Suite">
                     </div>
                     <div class="card-content">
                         <h3 id="grand">Grand Suite</h3>
@@ -98,7 +98,7 @@
     <section class="presidential-feature">
         <div class="container presidential-content-wrap">
             <div class="presidential-image-box" data-aos="fade-right">
-                <img src="https://picsum.photos/id/350/800/600" alt="Presidential Suite Interior" class="img-responsive">
+                <img src="https://plus.unsplash.com/premium_photo-1661873298245-e78a12a3d157?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fHByZXNpZGVudGlhbCUyMHN1aXRlfGVufDB8fDB8fHww&auto=format&fit=crop&q=60&w=500" alt="Presidential Suite Interior" class="img-responsive">
             </div>
             <div class="presidential-text-box" data-aos="fade-left">
                 <h3 id="presidential" class="gold-heading">The Presidential Suite.</h3>
@@ -128,9 +128,10 @@
 
 
     <footer>
-        <p>Lux Aeterna Hotel | Address: 123 Elegance Blvd, Ikoyi, Lagos, Nigeria | Phone: +234 (0) 1 555 8888</p>
-        <p>© 2025 Lux Aeterna Hotel. Setting the Standard Since 2022.</p>
-    </footer>
+    <p>Lux Aeterna Hotel | Address: 123 Elegance Blvd, Ikoyi, Lagos, Nigeria | Phone: +234 (0) 1 555 8888</p>
+    <p>© 2025 Lux Aeterna Hotel. Setting the Standard Since 2022.</p>
+    <p class="design-credit">Designed by <a href="https://www.instagram.com/dev_boy09/" target="_blank">Emerald</a></p>
+</footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
